ajustando breadcrumb; link nos pedidos autorizados de inclusao de alimentacao

--- a/src/components/Shareable/Page/style.scss
+++ b/src/components/Shareable/Page/style.scss
@@ -18,9 +18,9 @@
 
 #content-wrapper {
   div.content-wrapper-div {
-    //margin-left: 18rem;
+    margin-left: 17rem;
     &.toggled {
-      //margin-left: 6rem;
+      margin-left: 5.5rem;
     }
   }
 }
