--- a/src/components/Shareable/Sidebar/style.scss
+++ b/src/components/Shareable/Sidebar/style.scss
@@ -18,10 +18,10 @@ body {
 }
 
 .sidebar-dark {
-  //height: 100%;
-  //position: fixed;
-  //z-index: 1;
-  //left: 0;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  left: 0;
   i.fa-chevron-circle-left,
   i.fa-chevron-circle-right {
     padding-right: 10px;
