deixando icone desnecessario invisivel

--- a/src/components/Shareable/labelAndInput/style.scss
+++ b/src/components/Shareable/labelAndInput/style.scss
@@ -108,3 +108,7 @@ div.react-datepicker-wrapper {
   display: flex;
   flex-direction: column-reverse;
 }
+
+.react-datepicker__close-icon{
+  display: none;
+}
