componente novo - inputtext

--- a/src/components/Shareable/Botao/style.scss
+++ b/src/components/Shareable/Botao/style.scss
@@ -3,10 +3,11 @@
 button.general-button {
   border-radius: 3px;
   font-size: 14px;
-  text-align: center;
   font-style: normal;
   font-weight: bold;
-  padding: 12px;
+  height: 38px;
+  padding: 0 12px;
+  text-align: center;
   i {
     padding-right: 8px;
   }
