--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,6 +13,7 @@ $grayHeader: #929394;
 $grayIcon: #c2cfe0;
 $grayInputBackground: #e8e8e8;
 $grayLight: #a8a8a8;
+$grayPlaceholder: #a4a4a4;
 $green: #198459;
 $greenButtonHover: #0c6b45;
 $greenHover: #00c855;
