--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -376,6 +376,7 @@ table.cadastro-empresa {
   position: relative !important;
   label[aria-selected="true"] {
     font-weight: bold !important;
+    font-size: 14px;
     color: white !important;
     background-color: #109cf1 !important;
   }
