login com identidade nova; componente checkbox

--- a/src/components/Shareable/Input/style.scss
+++ b/src/components/Shareable/Input/style.scss
@@ -11,6 +11,7 @@ div.input {
     color: $gray;
   }
   input {
+    font-size: 14px;
     color: $blackInput;
     height: 38px;
     font-weight: normal;
