--- a/src/components/Shareable/labelAndInput/style.scss
+++ b/src/components/Shareable/labelAndInput/style.scss
@@ -5,7 +5,7 @@ div.react-datepicker-wrapper {
 }
 
 .col-form-label {
-  font-weight: 600 !important;
+  font-weight: normal;
   font-size: 14px !important;
 }
 
