--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -11,6 +11,12 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+a.hyperlink {
+  font-size: 14px;
+  color: $blue;
+}
+
 .right-half {
   background-color: #fffffd;
   position: absolute;
