dashboard dre identidade visual nova

--- a/src/components/Shareable/Botao/style.scss
+++ b/src/components/Shareable/Botao/style.scss
@@ -35,6 +35,7 @@ button.general-button {
       color: $blueButtonFont;
     }
     &:hover {
+      color: $white;
       background-color: $blueButtonBackground;
     }
     &:disabled {
