--- a/src/components/Shareable/TabelaHistoricoLotes/style.scss
+++ b/src/components/Shareable/TabelaHistoricoLotes/style.scss
@@ -1,7 +1,9 @@
+@import "../../../styles/variables.scss";
+
 .table-lote {
   p {
     font-size: 14px;
-    color: #686868;
+    color: $blackInput;
   }
   table {
     th {
@@ -16,7 +18,7 @@
       text-transform: uppercase;
       font-weight: normal;
       font-size: 12px;
-      color: #853cb6;
+      color: $grayPlaceholder;
       &:nth-child(2) {
         padding-left: 120px;
       }
