--- a/src/components/Shareable/CardPendencia/style.scss
+++ b/src/components/Shareable/CardPendencia/style.scss
@@ -55,9 +55,14 @@
       font-size: 12px;
       color: #686868;
       .value {
-        padding-left: 10px;
+        padding-left: 0.5em;
         font-weight: bold;
       }
     }
   }
+}
+
+.descricao-solicitacoes{
+  display: grid;
+
 }
