--- a/src/components/Shareable/Botao/style.scss
+++ b/src/components/Shareable/Botao/style.scss
@@ -8,7 +8,7 @@ button.general-button {
   height: 38px;
   padding: 0 12px;
   text-align: center;
-  i {
+  i.text-and-icon {
     padding-right: 8px;
   }
   &.blue-button {
