--- a/src/components/Shareable/CardListarSolicitacoes/style.scss
+++ b/src/components/Shareable/CardListarSolicitacoes/style.scss
@@ -14,8 +14,9 @@
   }
 }
 
-.card-panel {
-  border-left: 10px solid !important;
+.card-list-panel {
+  overflow-x: hidden;
+  border: none !important;
   i {
     padding: 0 10px;
   }
@@ -26,11 +27,16 @@
     padding: 0 10px;
     font-weight: bold;
     font-size: 12px;
-    color: #707683;
+    color: $blackInput;
     margin-bottom: 0.3rem;
     span {
       font-weight: normal;
     }
+  }
+  span.date-time {
+    font-size: 10px;
+    color: $blackInput;
+    padding-right: 35px;
   }
   a.see-more {
     font-weight: bold;
@@ -40,7 +46,6 @@
     padding: 10px 0;
   }
   &.card-authorized {
-    border-left-color: $greenPanel !important;
     i {
       color: $greenPanel;
     }
