--- a/src/components/Shareable/Checkbox/CleanCheckbox/style.scss
+++ b/src/components/Shareable/Checkbox/CleanCheckbox/style.scss
@@ -1,6 +1,6 @@
-@import "../../../styles/variables.scss";
+@import "../../../../styles/variables.scss";
 
-.checkbox-component {
+.clean-checkbox-component {
   .checkbox-label {
     color: $gray;
     font-size: 14px;
@@ -27,16 +27,6 @@
             background-color: transparent;
             border-radius: 0;
           }
-          &.small {
-            border-radius: 4px;
-            &:after {
-              transform: rotate(45deg) scale(0.7);
-              left: 4px;
-              top: 0px;
-              width: 6px;
-              height: 11px;
-            }
-          }
         }
       }
     }
@@ -46,10 +36,6 @@
       left: 0px;
       height: 20px;
       width: 20px;
-      &.small {
-        height: 14px;
-        width: 14px;
-      }
       background-color: #fff;
       border-radius: 3px;
       border: 1px solid $gray;
@@ -80,7 +66,4 @@
   top: unset;
   position: relative;
   padding-right: 20px;
-  &.small {
-    padding-right: 0px;
-  }
 }
