--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -27,6 +27,7 @@ $greenToastSuccess: #155724;
 $orange: #d06d12;
 $placeholder: #ced4da;
 $red: #a50e05;
+$redAlert: #E21017;
 $redToastError: #721c24;
 $redBackgroundToastError: #f8d7da;
 $yellowBackgroundToastWarning: #fff3cd;
