--- a/src/components/InclusaoDeAlimentacao/style.scss
+++ b/src/components/InclusaoDeAlimentacao/style.scss
@@ -1,68 +1,69 @@
-h3 {
-  color: #353535;
-}
+@import "../../styles/variables.scss";
 
-.table-titles {
-  div {
-    padding: 15px 0;
-    &:nth-child(1) {
-      padding-left: 1rem;
+.card.food-inclusion {
+  .card-title {
+    color: $blackInput;
+  }
+  .table-titles {
+    font-size: 14px;
+    padding-left: 15px;
+    color: $gray;
+    .type-food {
+      padding-left: 20px;
     }
-    &:nth-child(2) {
-      padding-left: 3.5rem;
+    .n-students {
+      padding-left: 7px;
     }
-    &:nth-child(3) {
-      padding-left: 1.5rem;
+    div {
+      padding: 15px 0;
     }
   }
-}
-
-.period-quantity {
-  margin-left: -1.4rem;
-  border-radius: 7px;
-  &.number-0 {
-    background-color: #fff7cb;
-  }
-  &.number-1 {
-    background-color: #ebedff;
-  }
-  &.number-2 {
-    background-color: #ffeed6;
-  }
-  &.number-3 {
-    background-color: #eaffe3;
-  }
-  &.number-4 {
-    background-color: #e4f1ff;
-  }
-}
-
-section {
-  margin: 0.5em 0 1.5em 0;
-  grid-row-gap: 2em;
-
-  .grid_principal {
-    display: grid !important;
-    grid-template-columns: 69% 29%;
-    grid-column-gap: 2%;
+  .period-quantity {
+    border-radius: 7px;
+    &.number-0 {
+      background-color: #fff7cb;
+    }
+    &.number-1 {
+      background-color: #ebedff;
+    }
+    &.number-2 {
+      background-color: #ffeed6;
+    }
+    &.number-3 {
+      background-color: #eaffe3;
+    }
+    &.number-4 {
+      background-color: #e4f1ff;
+    }
   }
 
-  .grid-motivo-continuo{
-    display: grid !important;
-    grid-template-columns: 28% 28% 38%;
-    grid-column-gap: 2%;
-  }
+  section {
+    margin: 0.5em 0 1.5em 0;
+    grid-row-gap: 2em;
 
-  .display{
-    display: none;
-  }
+    .grid_principal {
+      display: grid !important;
+      grid-template-columns: 69% 29%;
+      grid-column-gap: 2%;
+    }
 
-  .grid-outro-motivo {
-    display: grid;
-    grid-template-columns: 60% 40%;
+    .grid-motivo-continuo {
+      display: grid !important;
+      grid-template-columns: 28% 28% 38%;
+      grid-column-gap: 2%;
+    }
 
-    div{
-      padding: 0 !important;
+    .display {
+      display: none;
+    }
+
+    .grid-outro-motivo {
+      display: grid;
+      grid-template-columns: 60% 40%;
+
+      div {
+        padding: 0 !important;
+      }
     }
   }
 }
