- navegando corretamente. - mostrando detalhe do pedido da escola

--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -371,8 +371,24 @@ div.caption-choices {
     padding: 10px 0;
   }
 }
-.red-label {
+.label {
   font-size: 14px;
   line-height: 16px;
-  color: $redAlert;
+  &--red {
+    @extend .label;
+    color: $redAlert;
+  }
+  &--gray {
+    @extend .label;
+    color: $gray;
+  }
+}
+
+.margin-fix {
+  p {
+    margin: 0 0 0.2em 0 !important;
+  }
+  b {
+    margin: 0 0 0.2em 0 !important;
+  }
 }
