identidade visual - inclusao de alimentacao - dre - painel de pedidos e relatorio

--- a/src/components/Shareable/Botao/style.scss
+++ b/src/components/Shareable/Botao/style.scss
@@ -37,6 +37,9 @@ button.general-button {
     &:hover {
       color: $white;
       background-color: $blueButtonBackground;
+      i {
+        color: $white;
+      }
     }
     &:disabled {
       background-color: transparent;
@@ -70,6 +73,9 @@ button.general-button {
     &:hover {
       color: $white;
       background-color: $greenButtonHover;
+      i {
+        color: $white;
+      }
     }
     &:disabled {
       background-color: transparent;
