--- a/src/components/InclusaoDeAlimentacao/DRE/Relatorio/style.scss
+++ b/src/components/InclusaoDeAlimentacao/DRE/Relatorio/style.scss
@@ -1,25 +1,30 @@
-.title-message {
-  font-weight: bold;
-  color: #686868;
-  font-size: 14px;
-}
+@import "../../../../styles/variables.scss";
 
-table.table-periods {
-  margin-top: 20px;
-  tr {
-    color: #686868;
-    margin-top: 20px;
+.report.food-inclusion {
+  .title-message {
+    color: $gray;
     font-size: 14px;
-    th {
-      font-weight: normal;
-      &:not(:first-child) {
-        padding-left: 40px;
+    font-weight: 500;
+  }
+
+  table.table-periods {
+    margin-top: 20px;
+    tr {
+      color: $gray;
+      margin-top: 20px;
+      font-size: 14px;
+      th {
+        font-weight: normal;
+        &:not(:first-child) {
+          padding-left: 40px;
+        }
       }
-    }
-    td {
-      font-weight: bold;
-      &:not(:first-child) {
-        padding-left: 40px;
+      td {
+        font-weight: bold;
+        color: $blackInput;
+        &:not(:first-child) {
+          padding-left: 40px;
+        }
       }
     }
   }
