--- a/src/components/Shareable/CardPendenciaAprovacao/style.scss
+++ b/src/components/Shareable/CardPendenciaAprovacao/style.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .card-pendency-approval {
   padding: 16px 44px;
   border: 1px solid #dadada;
@@ -8,13 +10,13 @@
     font-weight: bold;
     font-size: 18px;
     &.priority {
-      color: #c9251b;
+      color: $red;
     }
     &.on-limit {
-      color: #e1a303;
+      color: $orange;
     }
     &.regular {
-      color: #5ec530;
+      color: $greenPanel;
     }
   }
   .order-box {
@@ -25,13 +27,13 @@
     box-sizing: border-box;
     border-radius: 4px;
     &.priority {
-      background: #c9251b;
+      background: $red;
     }
     &.on-limit {
-      background: #e1a303;
+      background: $orange;
     }
     &.regular {
-      background: #5ec530;
+      background: $greenPanel;
     }
     span {
       font-weight: bold;
