--- a/src/components/InclusaoDeAlimentacao/components/CardHistorico/style.scss
+++ b/src/components/InclusaoDeAlimentacao/components/CardHistorico/style.scss
@@ -8,22 +8,101 @@
   letter-spacing: 0.01em;
   height: 4em;
 }
-.select-all {
-  .checkbox-label {
-    margin-left: 20px;
-    padding-top: 8px;
-    padding-left: 20px;
-  }
-  .checkbox-custom {
-    margin-left: 20px;
+
+@import "../../../../styles/variables.scss";
+
+.card-header {
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: #fff !important;
+  border-bottom: 1px solid #e3e6f0;
+  color: #035d96;
+  font-weight: bold;
+  letter-spacing: 0.01em;
+  height: 4em;
+}
+.c-pointer {
+  cursor: pointer;
+  &:hover {
+    border-bottom: 1px solid $blue;
   }
 }
 
-.td-check {
-  .checkbox-label,
-  .checkbox-custom {
-    top: unset;
-    position: relative;
-    padding-right: 20px;
+.select-all.historic, .td-check {
+  .checkbox-label {
+    color: $gray;
+    font-size: 14px;
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      &:checked {
+        ~ .checkbox-custom {
+          background-color: $blueCheckAndRadio;
+          border-radius: 5px;
+          transform: rotate(0deg) scale(1);
+          opacity: 1;
+          border: 1px solid $blueCheckAndRadio;
+          &:after {
+            transform: rotate(45deg) scale(1);
+            opacity: 1;
+            left: 7px;
+            top: 2px;
+            width: 6px;
+            height: 12px;
+            border: solid white;
+            border-width: 0 2px 2px 0;
+            background-color: transparent;
+            border-radius: 0;
+          }
+          &.small {
+            border-radius: 4px;
+            &:after {
+              transform: rotate(45deg) scale(0.7);
+              left: 4px;
+              top: 0px;
+              width: 6px;
+              height: 11px;
+            }
+          }
+        }
+      }
+    }
+    .checkbox-custom {
+      position: absolute;
+      padding-right: 0;
+      top: 10px;
+      left: -20px;
+      height: 20px;
+      width: 20px;
+      &.small {
+        height: 14px;
+        width: 14px;
+      }
+      &.report-line {
+        top: -12px;
+        left: 0px;
+      }
+      background-color: #fff;
+      border-radius: 3px;
+      border: 1px solid $gray;
+      cursor: pointer;
+      &:after {
+        position: absolute;
+        content: "";
+        left: 12px;
+        top: 12px;
+        height: 0px;
+        width: 0px;
+        border-radius: 5px;
+        border: solid $blueCheckAndRadio;
+        border-width: 0 3px 3px 0;
+        transform: rotate(0deg) scale(0);
+        opacity: 1;
+      }
+      &.radio {
+        border-radius: 15px;
+      }
+    }
   }
 }
