--- a/src/components/InclusaoDeAlimentacao/style.scss
+++ b/src/components/InclusaoDeAlimentacao/style.scss
@@ -67,3 +67,39 @@
     }
   }
 }
+
+.badge-sme {
+  &.badge-secondary-sme {
+    background-color:  #D9D8D8;
+  }
+}
+
+.report.food-inclusion {
+  .title-message {
+    color: $gray;
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  table.table-periods {
+    margin-top: 20px;
+    tr {
+      color: $gray;
+      margin-top: 20px;
+      font-size: 14px;
+      th {
+        font-weight: normal;
+        &:not(:first-child) {
+          padding-left: 40px;
+        }
+      }
+      td {
+        font-weight: bold;
+        color: $blackInput;
+        &:not(:first-child) {
+          padding-left: 40px;
+        }
+      }
+    }
+  }
+}
