novo componente kit lanche

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,7 @@ $blueIcon: #334d6e;
 $blueSelected: #f2fbfe;
 $blueToastInfo: #0C5460;
 $gray: #686868;
+$grayCard: #eeeeee;
 $grayDisabled: #dadada;
 $grayHeader: #929394;
 $grayIcon: #c2cfe0;
