--- a/src/components/Shareable/PedidoKitLanche/OpcoesKits/CardKit/style.scss
+++ b/src/components/Shareable/PedidoKitLanche/OpcoesKits/CardKit/style.scss
@@ -58,52 +58,40 @@ div.card.meal-kit {
     cursor: pointer;
     height: 0;
     width: 0;
+    &:checked ~ .checkmark {
+      background-color: $blueCheckAndRadio;
+    }
+    &:checked ~ .checkmark:after {
+      display: block;
+    }
   }
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  background-color: $white;
-  border: 1px solid $grayPlaceholder;
-  border-radius: 4px;
-}
-
-/* On mouse-over, add a grey background color */
-.container-checkbox:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.container-checkbox input:checked ~ .checkmark {
-  background-color: $blueCheckAndRadio;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.container-checkbox input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.container-checkbox .checkmark:after {
-  left: 7px;
-  top: 3px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  &:hover {
+    input:not(:checked) ~ .checkmark {
+      background-color: $grayInputBackground;
+    }
+  }
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: $white;
+    border: 1px solid $grayPlaceholder;
+    border-radius: 4px;
+    &:after {
+      content: "";
+      position: absolute;
+      display: none;
+      left: 7px;
+      top: 3px;
+      width: 5px;
+      height: 10px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
+  }
 }
