--- a/src/components/InclusaoDeAlimentacao/components/CardHistorico/style.scss
+++ b/src/components/InclusaoDeAlimentacao/components/CardHistorico/style.scss
@@ -18,7 +18,8 @@ tr.c-pointer {
   }
 }
 
-.select-all.historic, .td-check {
+.select-all.historic,
+.td-check {
   .checkbox-label {
     color: $gray;
     font-size: 14px;
