--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,7 +10,7 @@ $blueButtonFont: #086397;
 $blueCheckAndRadio: #007bff;
 $blueIcon: #334d6e;
 $blueSelected: #f2fbfe;
-$blueToastInfo: #0C5460;
+$blueToastInfo: #0c5460;
 $gray: #686868;
 $grayCard: #eeeeee;
 $grayDisabled: #dadada;
@@ -28,7 +28,7 @@ $greenToastSuccess: #155724;
 $orange: #d06d12;
 $placeholder: #ced4da;
 $red: #a50e05;
-$redAlert: #E21017;
+$redAlert: #e21017;
 $redToastError: #721c24;
 $redBackgroundToastError: #f8d7da;
 $yellowBackgroundToastWarning: #fff3cd;
