--- a/src/components/InversaoDeDiaDeCardapio/components/CardHistorico/style.scss
+++ b/src/components/InversaoDeDiaDeCardapio/components/CardHistorico/style.scss
@@ -20,7 +20,8 @@
 }
 
 .td-check {
-  .checkbox-label, .checkbox-custom {
+  .checkbox-label,
+  .checkbox-custom {
     top: unset;
     position: relative;
     padding-right: 20px;
