--- a/src/components/SolicitacaoUnificada/components/CardPendenciaAprovacao/style.scss
+++ b/src/components/SolicitacaoUnificada/components/CardPendenciaAprovacao/style.scss
@@ -67,7 +67,8 @@
       color: #353535;
       border-bottom: 1px solid #c0c0c0;
       padding: 10px 0;
-      &:nth-child(1), &:nth-child(2) {
+      &:nth-child(1),
+      &:nth-child(2) {
         padding-left: 1rem;
       }
       &:nth-child(3) {
